--- a/21.11.24/index.html
+++ b/21.11.24/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    <script src="./script2.js"></script>
 </head>
 
 <body>
 
+    <button onclick="sec2()">Click For 2Sec</button>
 </body>
 
 </html>
