--- a/תרגלים/indextargil.html
+++ b/תרגלים/indextargil.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./targil.js" defer></script>
+
 </head>
 
 <body>
+    <div>
+        <h1 id="questions"></h1>
+        <h1></h1>
+    </div>
+    <div id="input1"><input type="number"></div>
+    <div id="click" onclick="Text">click here</div>
 
+    <script src="./js2.js" defer></script>
 </body>
 
 </html>
