--- a/תרגילים-2/index.html
+++ b/תרגילים-2/index.html
@@ -10,6 +10,7 @@
     <style>
         body {
             direction: rtl;
+
         }
 
         #aba {
@@ -60,7 +61,7 @@
             <div id="submits">
 
                 <input id="add" type="submit" value="הוסף" onclick=" addone()">
-                <input id="save" type="submit" value="מחק">
+                <input id="delet" type="submit" value="מחק" onclick=" remove()">
 
             </div>
 
