--- a/ElementsBuilder/index.html
+++ b/ElementsBuilder/index.html
@@ -7,9 +7,12 @@
     <title>DOM</title>
 
     <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             direction: rtl;
+            background-color: rgba(75, 75, 45, 0.267);
+
 
         }
 
@@ -19,6 +22,7 @@
             display: flex;
             flex-direction: column;
             background-color: aqua;
+
 
 
         }
@@ -36,16 +40,17 @@
 
         #main {
 
-            background-image: url(/pexels-photo-235985.jpeg);
+            background-image: url(pexels-photo-235985.jpeg);
             direction: rtl;
             border: 2px solid black;
-            height: 85vh;
+
+            margin: auto;
 
         }
 
         #selector {
 
-            width: 150px;
+            width: auto;
             text-align: center;
 
         }
@@ -63,6 +68,8 @@
         }
 
         #submits {
+            display: flex;
+            flex-direction: column;
             width: 30%;
         }
     </style>
@@ -81,7 +88,7 @@
 
             <div id="inputs">
                 <select name="" id="selector">
-                    <option disabled value="" selected>Select Element</option>
+                    <option disabled value="" selected>Select element</option>
                     <option value="Div">Div</option>
                     <option value="h1">h1</option>
                     <option value="h2">h2</option>
@@ -92,10 +99,10 @@
                     <option value="label">label</option>
                     <option value="input">input</option>
 
+
                 </select>
 
             </div>
-
 
 
 
