--- a/ElementsBuilder/index.html
+++ b/ElementsBuilder/index.html
@@ -108,8 +108,8 @@
 
             <div id="submits">
 
-                <input id="add" type="submit" value="הוסף" onclick=" addone()">
-                <input id="save" type="submit" value="מחק" onclick=" remove()">
+                <input id="add" type="submit" value="Add" onclick=" addone()">
+                <input id="save" type="submit" value="delete" onclick=" remove()">
 
             </div>
 
