--- a/CalculateGame/indextargil.html
+++ b/CalculateGame/indextargil.html
@@ -17,7 +17,7 @@
             text-align: center;
             box-shadow: 0 4px 12px rgba(45, 94, 200, 0.2);
             margin-top: 5%;
-            background-image: url(/home-green.jpg);
+            background-image: url(./home-green.jpg);
             background-repeat: no-repeat;
             background-position: center;
             background-size: contain;
