--- a/LoginPageProject/index.html
+++ b/LoginPageProject/index.html
@@ -86,8 +86,8 @@
     <div id="UserBox">
 
         <div id="inputs">
-            <h1 id="main"> LogIn</h1>
-            <label for="">Username</label><br>
+            <h1 id="main"> Welcome To Sign in Page...</h1>
+            <label for="">Email</label><br>
             <input type="text" id="username"><br><br>
             <label for="">Password</label><br><br>
             <input type="password" id="pass"><br><br><br>
