--- a/LoginPageProject/index2.html
+++ b/LoginPageProject/index2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Input Test</title>
-    <script src="user.js" defer></script>
+    <script src="user.js" defer type="module"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -25,6 +25,29 @@
         </div>
 
     </div>
+
+
+    <div id="second">
+
+        <div id="UserBox">
+
+            <div id="inputs">
+
+
+
+                <input type="submit" value="login" id="submit" onclick="yes()""><br>
+            
+        </div>
+    </div>
+
+    <div id=" changeName">
+
+
+            </div>
+            <h2 id="wrong"></h2>
+
+
+        </div>
 
 </body>
 
