--- a/LoginPageProject/index2.html
+++ b/LoginPageProject/index2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Input Test</title>
     <script src="user.js" defer type="module"></script>
+    <script src="./index.js" defer type="module"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
